--- a/src/admin/models/forms/testimonial.xml
+++ b/src/admin/models/forms/testimonial.xml
@@ -10,34 +10,43 @@
 		<field name="title" type="text"
 			class="input-xxlarge input-large-text"
 			size="40" label="JGLOBAL_TITLE"
-			description="COM_XPERT_TEXTIMONIALS_FIELD_TITLE_DESC" required="true" />
-
-		<field name="alias" type="text"
-			size="40" label="JFIELD_ALIAS_LABEL"
-			description="COM_XPERT_TEXTIMONIALS_FIELD_ALIAS_DESC"
-			hint="JFIELD_ALIAS_PLACEHOLDER" />
+			description="COM_XPERT_TESTIMONIALS_FIELD_TITLE_DESC" required="true" />
 
 		<field name="catid" type="categoryedit" extension="com_xpert_testimonials"
-			label="JCATEGORY" description="COM_XPERT_TEXTIMONIALS_FIELD_CATEGORY_DESC"
+			label="JCATEGORY" description="COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC"
 		>
 		</field>
 
+		<field name="name" type="text"
+			class="input-xxlarge input-large-text"
+			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL"
+			description="COM_XPERT_TESTIMONIALS_FIELD_NAME_DESC" required="true" />
+
+		<field name="designation" type="text"
+			class="input-xlarge"
+			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_LABEL"
+			description="COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC" required="true" />
+
+		<field name="email" type="text"
+			class="input-xlarge"
+			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_EMAIL_LABEL"
+			description="COM_XPERT_TESTIMONIALS_FIELD_EMAIL_DESC" required="true" />
 
 		<field name="url" type="url"
 			class="span12"
 			filter="url"
-			size="40" label="COM_XPERT_TEXTIMONIALS_FIELD_URL_LABEL"
-			description="COM_XPERT_TEXTIMONIALS_FIELD_URL_DESC" required="true" />
+			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_URL_LABEL"
+			description="COM_XPERT_TESTIMONIALS_FIELD_URL_DESC" required="true" />
 
 		<field name="description" type="editor" buttons="true" hide="pagebreak,readmore"
 			filter="JComponentHelper::filterText"
-			label="JGLOBAL_DESCRIPTION" description="COM_XPERT_TEXTIMONIALS_FIELD_DESCRIPTION_DESC" />
+			label="JGLOBAL_DESCRIPTION" description="COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC" />
 
 		<field name="hits"
 			type="text"
 			class="readonly"
 			size="6" label="JGLOBAL_HITS"
-			description="COM_XPERT_TEXTIMONIALS_HITS_DESC"
+			description="COM_XPERT_TESTIMONIALS_HITS_DESC"
 			readonly="true"
 			filter="unset" />
 
@@ -46,7 +55,7 @@
 			name="state"
 			type="list"
 			label="JSTATUS"
-			description="COM_XPERT_TEXTIMONIALS_FIELD_STATE_DESC"
+			description="COM_XPERT_TESTIMONIALS_FIELD_STATE_DESC"
 			class="chzn-color-state"
 			size="1"
 			default="1">
@@ -57,7 +66,7 @@
 			<option
 				value="2">JARCHIVED</option>
 			<option
-				value="-3">COM_XPERT_TEXTIMONIALS_FIELD_VALUE_REPORTED</option>
+				value="-3">COM_XPERT_TESTIMONIALS_FIELD_VALUE_REPORTED</option>
 			<option
 				value="-2">JTRASHED</option>
 		</field>
@@ -75,7 +84,7 @@
 			name="language"
 			type="contentlanguage"
 			label="JFIELD_LANGUAGE_LABEL"
-			description="COM_XPERT_TEXTIMONIALS_FIELD_LANGUAGE_DESC"
+			description="COM_XPERT_TESTIMONIALS_FIELD_LANGUAGE_DESC"
 			>
 			<option value="*">JALL</option>
 		</field>
@@ -109,7 +118,7 @@
 			size="20" />
 
 		<field name="modified" type="calendar" class="readonly"
-			label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_XPERT_TEXTIMONIALS_FIELD_MODIFIED_DESC"
+			label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_XPERT_TESTIMONIALS_FIELD_MODIFIED_DESC"
 			size="22" readonly="true" format="%Y-%m-%d %H:%M:%S"
 			filter="user_utc" />
 
@@ -134,7 +143,7 @@
 			filter="user_utc" />
 
 		<field name="version" type="text" class="readonly"
-			label="COM_XPERT_TEXTIMONIALS_FIELD_VERSION_LABEL" size="6" description="COM_XPERT_TEXTIMONIALS_FIELD_VERSION_DESC"
+			label="COM_XPERT_TESTIMONIALS_FIELD_VERSION_LABEL" size="6" description="COM_XPERT_TESTIMONIALS_FIELD_VERSION_DESC"
 			readonly="true" filter="unset" />
 
 
@@ -152,9 +161,9 @@
 	</fieldset>
 
 	<fields name="params" label="JGLOBAL_FIELDSET_DISPLAY_OPTIONS">
-		<fieldset name="jbasic" label="COM_XPERT_TEXTIMONIALS_FIELDSET_OPTIONS">
+		<fieldset name="jbasic" label="COM_XPERT_TESTIMONIALS_FIELDSET_OPTIONS">
 			<field name="target" type="list" default=""
-				label="COM_XPERT_TEXTIMONIALS_FIELD_TARGET_LABEL" description="COM_XPERT_TEXTIMONIALS_FIELD_TARGET_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_TARGET_LABEL" description="COM_XPERT_TESTIMONIALS_FIELD_TARGET_DESC"
 			>
 				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JBROWSERTARGET_PARENT</option>
@@ -164,17 +173,17 @@
 			</field>
 
 			<field name="width" type="text"
-				class="validate-numeric" label="COM_XPERT_TEXTIMONIALS_FIELD_WIDTH_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_WIDTH_DESC" />
+				class="validate-numeric" label="COM_XPERT_TESTIMONIALS_FIELD_WIDTH_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_WIDTH_DESC" />
 
 			<field name="height" type="text"
-				class="validate-numeric" label="COM_XPERT_TEXTIMONIALS_FIELD_HEIGHT_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_HEIGHT_DESC" />
+				class="validate-numeric" label="COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_DESC" />
 
 			<field name="count_clicks" type="list"
 				class="chzn-color"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_COUNTCLICKS_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_COUNTCLICKS_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_DESC"
 			>
 				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JNO</option>
@@ -187,27 +196,27 @@
 			<field
 				name="image_first"
 				type="media"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_FIRST_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_FIRST_DESC" />
+				label="COM_XPERT_TESTIMONIALS_FIELD_FIRST_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_FIRST_DESC" />
 			<field
 				name="float_first"
 				type="list"
-				label="COM_XPERT_TEXTIMONIALS_FLOAT_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FLOAT_DESC">
+				label="COM_XPERT_TESTIMONIALS_FLOAT_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FLOAT_DESC">
 					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="right">COM_XPERT_TEXTIMONIALS_RIGHT</option>
-					<option value="left">COM_XPERT_TEXTIMONIALS_LEFT</option>
-					<option value="none">COM_XPERT_TEXTIMONIALS_NONE</option>
+					<option value="right">COM_XPERT_TESTIMONIALS_RIGHT</option>
+					<option value="left">COM_XPERT_TESTIMONIALS_LEFT</option>
+					<option value="none">COM_XPERT_TESTIMONIALS_NONE</option>
 			</field>
 			<field name="image_first_alt"
 				type="text"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC"
 				size="20" />
 			<field name="image_first_caption"
 				type="text"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
 				size="20" />
 
 			<field name="spacer1"
@@ -217,27 +226,27 @@
 			<field
 				name="image_second"
 				type="media"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_SECOND_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_SECOND_DESC" />
+				label="COM_XPERT_TESTIMONIALS_FIELD_SECOND_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_SECOND_DESC" />
 			<field
 				name="float_second"
 				type="list"
-				label="COM_XPERT_TEXTIMONIALS_FLOAT_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FLOAT_DESC">
+				label="COM_XPERT_TESTIMONIALS_FLOAT_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FLOAT_DESC">
 					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="right">COM_XPERT_TEXTIMONIALS_RIGHT</option>
-					<option value="left">COM_XPERT_TEXTIMONIALS_LEFT</option>
-					<option value="none">COM_XPERT_TEXTIMONIALS_NONE</option>
+					<option value="right">COM_XPERT_TESTIMONIALS_RIGHT</option>
+					<option value="left">COM_XPERT_TESTIMONIALS_LEFT</option>
+					<option value="none">COM_XPERT_TESTIMONIALS_NONE</option>
 			</field>
 			<field name="image_second_alt"
 				type="text"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_ALT_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC"
 				size="20" />
 			<field name="image_second_caption"
 				type="text"
-				label="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
-				description="COM_XPERT_TEXTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
+				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
 				size="20" />
 		</fieldset>
 	</fields>
