--- a/src/admin/models/forms/testimonial.xml
+++ b/src/admin/models/forms/testimonial.xml
@@ -12,6 +12,11 @@
 			size="40" label="JGLOBAL_TITLE"
 			description="COM_XPERT_TESTIMONIALS_FIELD_TITLE_DESC" required="true" />
 
+		<field name="alias" type="text"
+			size="40" label="JFIELD_ALIAS_LABEL"
+			description="COM_XPERT_TESTIMONIALS_FIELD_ALIAS_DESC"
+			hint="JFIELD_ALIAS_PLACEHOLDER" />
+
 		<field name="catid" type="categoryedit" extension="com_xpert_testimonials"
 			label="JCATEGORY" description="COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC"
 		>
@@ -38,7 +43,7 @@
 			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_URL_LABEL"
 			description="COM_XPERT_TESTIMONIALS_FIELD_URL_DESC" required="true" />
 
-		<field name="description" type="editor" buttons="true" hide="pagebreak,readmore"
+		<field name="description" type="editor" buttons="false" editor="codemirror"
 			filter="JComponentHelper::filterText"
 			label="JGLOBAL_DESCRIPTION" description="COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC" />
 
@@ -147,57 +152,18 @@
 			readonly="true" filter="unset" />
 
 
-		<field name="metakey" type="textarea"
-			label="JFIELD_META_KEYWORDS_LABEL" description="JFIELD_META_KEYWORDS_DESC"
-			rows="3" cols="30" />
-
-		<field name="metadesc" type="textarea"
-			label="JFIELD_META_DESCRIPTION_LABEL" description="JFIELD_META_DESCRIPTION_DESC"
-			rows="3" cols="30" />
-
 		<field name="xreference" type="text"
 			label="JFIELD_XREFERENCE_LABEL" description="JFIELD_XREFERENCE_DESC"
 			size="20" />
 	</fieldset>
 
-	<fields name="params" label="JGLOBAL_FIELDSET_DISPLAY_OPTIONS">
-		<fieldset name="jbasic" label="COM_XPERT_TESTIMONIALS_FIELDSET_OPTIONS">
-			<field name="target" type="list" default=""
-				label="COM_XPERT_TESTIMONIALS_FIELD_TARGET_LABEL" description="COM_XPERT_TESTIMONIALS_FIELD_TARGET_DESC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JBROWSERTARGET_PARENT</option>
-				<option value="1">JBROWSERTARGET_NEW</option>
-				<option value="2">JBROWSERTARGET_POPUP</option>
-				<option value="3">JBROWSERTARGET_MODAL</option>
-			</field>
-
-			<field name="width" type="text"
-				class="validate-numeric" label="COM_XPERT_TESTIMONIALS_FIELD_WIDTH_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_WIDTH_DESC" />
-
-			<field name="height" type="text"
-				class="validate-numeric" label="COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_HEIGHT_DESC" />
-
-			<field name="count_clicks" type="list"
-				class="chzn-color"
-				label="COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_COUNTCLICKS_DESC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="0">JNO</option>
-				<option value="1">JYES</option>
-			</field>
-		</fieldset>
-	</fields>
 	<fields name="images">
 		<fieldset name="images" label="JGLOBAL_FIELDSET_IMAGE_OPTIONS">
 			<field
-				name="image_first"
+				name="author_image"
 				type="media"
-				label="COM_XPERT_TESTIMONIALS_FIELD_FIRST_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_FIRST_DESC" />
+				label="COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_LABEL"
+				description="COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_DESC" />
 			<field
 				name="float_first"
 				type="list"
@@ -208,67 +174,16 @@
 					<option value="left">COM_XPERT_TESTIMONIALS_LEFT</option>
 					<option value="none">COM_XPERT_TESTIMONIALS_NONE</option>
 			</field>
-			<field name="image_first_alt"
+			<field name="author_image_alt"
 				type="text"
 				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL"
 				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC"
 				size="20" />
-			<field name="image_first_caption"
+			<field name="author_image_caption"
 				type="text"
 				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
 				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
 				size="20" />
-
-			<field name="spacer1"
-				type="spacer"
-				hr="true" />
-
-			<field
-				name="image_second"
-				type="media"
-				label="COM_XPERT_TESTIMONIALS_FIELD_SECOND_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_SECOND_DESC" />
-			<field
-				name="float_second"
-				type="list"
-				label="COM_XPERT_TESTIMONIALS_FLOAT_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FLOAT_DESC">
-					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="right">COM_XPERT_TESTIMONIALS_RIGHT</option>
-					<option value="left">COM_XPERT_TESTIMONIALS_LEFT</option>
-					<option value="none">COM_XPERT_TESTIMONIALS_NONE</option>
-			</field>
-			<field name="image_second_alt"
-				type="text"
-				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC"
-				size="20" />
-			<field name="image_second_caption"
-				type="text"
-				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
-				size="20" />
-		</fieldset>
-	</fields>
-
-	<fields name="metadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
-		<fieldset name="jmetadata" label="JGLOBAL_FIELDSET_METADATA_OPTIONS">
-
-			<field name="robots"
-				type="list"
-				label="JFIELD_METADATA_ROBOTS_LABEL"
-				description="JFIELD_METADATA_ROBOTS_DESC"
-			>
-				<option value="">JGLOBAL_USE_GLOBAL</option>
-				<option value="index, follow">JGLOBAL_INDEX_FOLLOW</option>
-				<option value="noindex, follow">JGLOBAL_NOINDEX_FOLLOW</option>
-				<option value="index, nofollow">JGLOBAL_INDEX_NOFOLLOW</option>
-				<option value="noindex, nofollow">JGLOBAL_NOINDEX_NOFOLLOW</option>
-			</field>
-
-			<field name="rights" type="text"
-				label="JFIELD_META_RIGHTS_LABEL" description="JFIELD_META_RIGHTS_DESC"
-				required="false" filter="string" cols="30" rows="2" />
 		</fieldset>
 	</fields>
 </form>
