rebrand with new name

--- a/src/admin/models/forms/xmonial.xml
+++ b/src/admin/models/forms/xmonial.xml
@@ -10,48 +10,48 @@
 		<field name="title" type="text"
 			class="input-xxlarge input-large-text"
 			size="40" label="JGLOBAL_TITLE"
-			description="COM_XPERT_TESTIMONIALS_FIELD_TITLE_DESC" required="true" />
+			description="COM_XMONIALS_FIELD_TITLE_DESC" required="true" />
 
 		<field name="alias" type="text"
 			size="40" label="JFIELD_ALIAS_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_ALIAS_DESC"
+			description="COM_XMONIALS_FIELD_ALIAS_DESC"
 			hint="JFIELD_ALIAS_PLACEHOLDER" />
 
-		<field name="catid" type="categoryedit" extension="com_xpert_testimonials"
-			label="JCATEGORY" description="COM_XPERT_TESTIMONIALS_FIELD_CATEGORY_DESC"
+		<field name="catid" type="categoryedit" extension="com_xmonials"
+			label="JCATEGORY" description="COM_XMONIALS_FIELD_CATEGORY_DESC"
 		>
 		</field>
 
 		<field name="name" type="text"
 			class="input-xxlarge input-large-text"
-			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_NAME_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_NAME_DESC" required="true" />
+			size="40" label="COM_XMONIALS_FIELD_NAME_LABEL"
+			description="COM_XMONIALS_FIELD_NAME_DESC" required="true" />
 
 		<field name="designation" type="text"
 			class="input-xlarge"
-			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_DESIGNATION_DESC" required="true" />
+			size="40" label="COM_XMONIALS_FIELD_DESIGNATION_LABEL"
+			description="COM_XMONIALS_FIELD_DESIGNATION_DESC" required="true" />
 
 		<field name="email" type="text"
 			class="input-xlarge"
-			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_EMAIL_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_EMAIL_DESC" required="true" />
+			size="40" label="COM_XMONIALS_FIELD_EMAIL_LABEL"
+			description="COM_XMONIALS_FIELD_EMAIL_DESC" required="true" />
 
 		<field name="url" type="url"
 			class="span12"
 			filter="url"
-			size="40" label="COM_XPERT_TESTIMONIALS_FIELD_URL_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_URL_DESC"/>
+			size="40" label="COM_XMONIALS_FIELD_URL_LABEL"
+			description="COM_XMONIALS_FIELD_URL_DESC"/>
 
 		<field name="description" type="editor" buttons="false" editor="codemirror"
 			filter="JComponentHelper::filterText"
-			label="JGLOBAL_DESCRIPTION" description="COM_XPERT_TESTIMONIALS_FIELD_DESCRIPTION_DESC" />
+			label="JGLOBAL_DESCRIPTION" description="COM_XMONIALS_FIELD_DESCRIPTION_DESC" />
 
 		<field name="hits"
 			type="text"
 			class="readonly"
 			size="6" label="JGLOBAL_HITS"
-			description="COM_XPERT_TESTIMONIALS_HITS_DESC"
+			description="COM_XMONIALS_HITS_DESC"
 			readonly="true"
 			filter="unset" />
 
@@ -60,7 +60,7 @@
 			name="state"
 			type="list"
 			label="JSTATUS"
-			description="COM_XPERT_TESTIMONIALS_FIELD_STATE_DESC"
+			description="COM_XMONIALS_FIELD_STATE_DESC"
 			class="chzn-color-state"
 			size="1"
 			default="1">
@@ -71,7 +71,7 @@
 			<option
 				value="2">JARCHIVED</option>
 			<option
-				value="-3">COM_XPERT_TESTIMONIALS_FIELD_VALUE_REPORTED</option>
+				value="-3">COM_XMONIALS_FIELD_VALUE_REPORTED</option>
 			<option
 				value="-2">JTRASHED</option>
 		</field>
@@ -79,7 +79,7 @@
 		<field name="ordering" type="ordering"
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC"
-			content_type="com_xpert_testimonials.testimonial"
+			content_type="com_xmonials.xmonial"
         />
 
 		<field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
@@ -89,7 +89,7 @@
 			name="language"
 			type="contentlanguage"
 			label="JFIELD_LANGUAGE_LABEL"
-			description="COM_XPERT_TESTIMONIALS_FIELD_LANGUAGE_DESC"
+			description="COM_XMONIALS_FIELD_LANGUAGE_DESC"
 			>
 			<option value="*">JALL</option>
 		</field>
@@ -123,7 +123,7 @@
 			size="20" />
 
 		<field name="modified" type="calendar" class="readonly"
-			label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_XPERT_TESTIMONIALS_FIELD_MODIFIED_DESC"
+			label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_XMONIALS_FIELD_MODIFIED_DESC"
 			size="22" readonly="true" format="%Y-%m-%d %H:%M:%S"
 			filter="user_utc" />
 
@@ -148,7 +148,7 @@
 			filter="user_utc" />
 
 		<field name="version" type="text" class="readonly"
-			label="COM_XPERT_TESTIMONIALS_FIELD_VERSION_LABEL" size="6" description="COM_XPERT_TESTIMONIALS_FIELD_VERSION_DESC"
+			label="COM_XMONIALS_FIELD_VERSION_LABEL" size="6" description="COM_XMONIALS_FIELD_VERSION_DESC"
 			readonly="true" filter="unset" />
 
 
@@ -162,27 +162,27 @@
 			<field
 				name="author_image"
 				type="media"
-				label="COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_AUTHOR_IMAGE_DESC" />
+				label="COM_XMONIALS_FIELD_AUTHOR_IMAGE_LABEL"
+				description="COM_XMONIALS_FIELD_AUTHOR_IMAGE_DESC" />
 			<field
 				name="float_author_image"
 				type="list"
-				label="COM_XPERT_TESTIMONIALS_FLOAT_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FLOAT_DESC">
+				label="COM_XMONIALS_FLOAT_LABEL"
+				description="COM_XMONIALS_FLOAT_DESC">
 					<option value="">JGLOBAL_USE_GLOBAL</option>
-					<option value="right">COM_XPERT_TESTIMONIALS_RIGHT</option>
-					<option value="left">COM_XPERT_TESTIMONIALS_LEFT</option>
-					<option value="none">COM_XPERT_TESTIMONIALS_NONE</option>
+					<option value="right">COM_XMONIALS_RIGHT</option>
+					<option value="left">COM_XMONIALS_LEFT</option>
+					<option value="none">COM_XMONIALS_NONE</option>
 			</field>
 			<field name="author_image_alt"
 				type="text"
-				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_ALT_DESC"
+				label="COM_XMONIALS_FIELD_IMAGE_ALT_LABEL"
+				description="COM_XMONIALS_FIELD_IMAGE_ALT_DESC"
 				size="20" />
 			<field name="author_image_caption"
 				type="text"
-				label="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_LABEL"
-				description="COM_XPERT_TESTIMONIALS_FIELD_IMAGE_CAPTION_DESC"
+				label="COM_XMONIALS_FIELD_IMAGE_CAPTION_LABEL"
+				description="COM_XMONIALS_FIELD_IMAGE_CAPTION_DESC"
 				size="20" />
 		</fieldset>
 	</fields>
